# JoBase

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  MANIFEST.in  README.md  build.sh  game.py  pyproject.toml  setup.py  wheel.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  static.yml  wheels.yml
JoBase/: __init__.py  collision.py  graphics.py  math.py  setup.py
JoBase/examples/: box_physics.py  coin_collector.py  physics.py  scetches.py  sketches.py  tennis.py
JoBase/examples/blue_hue/: README.md  __main__.py
JoBase/examples/squirtcopter/: README.md  __main__.py
JoBase/resources/: __init__.py
include/: main.h
include/glad/: glad.h
module/: __init__.pyi
src/: base.c  body.c  button.c  camera.c  circle.c  collide.c  cursor.c  glad.c  groove.c  group.c  image.c  joint.c  key.c  line.c  main.c  mod.c  module.c  motor.c  mouse.c  physics.c  pin.c  pivot.c  points.c  rect.c  rectangle.c  schrift.c  screen.c  shape.c  sound.c  spring.c  text.c  vector.c  window.c
